<resources>
    <string name="app_name">Never give up</string>
    <string name="setting">设置</string>
    <string name="main_page">主页面</string>
    <string name="minute">分钟</string>
    <string name="accessibility_service_description">这个辅助功能是为了检测屏幕变化，不会收集不必要的数据</string>
    <string name="begin">开始</string>
    <string name="motto_calm">Keep Calm and Carry On.</string>
    <string name="cancel">取消</string>
    <string name="hint">提示</string>
    <string name="text_positive">去意已决</string>
    <string name="text_cancel">容我想想</string>
    <string name="cancel_timedown_dialog_message">如果现在停止，乌鸦就会因为没水喝而渴死，望三思！</string>
    <string name="cancel_result">如果现在停止，乌鸦就会因为没水喝而渴死，望三思！</string>
    <string name="do_next">再试一次</string>
    <string name="success_percent">成功时长占比%1$d%%</string>
    <string name="bird_died">因为你的半途而废，小乌鸦渴死了</string>
    <string name="option">选项</string>
    <string name="award">成就</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="go_login">已有账号，去登录</string>
    <string name="go_register">没有账号，去注册</string>
    <string name="please_input_school_num">学号</string>
    <string name="please_input_account">账号</string>
    <string name="please_input_pwd">密码</string>
    <string name="please_input_pwd2">确认密码</string>
    <string name="please_input_name">昵称</string>
    <string name="pwd_not_same">两次输入的密码不一致</string>
    <string name="please_select_head">请选择头像</string>
    <string name="school_timetables">课程表</string>
    <string name="task_list">任务列表</string>
    <string name="user_info">个人信息</string>
    <string name="confirm">确认</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="password_not_same">两次密码输入不一致</string>
    <string name="name_is">昵称： %1s</string>
    <string name="school_num_is">学号： %1s</string>
    <string name="account_is">账号： %1s</string>
    <string name="password_update">密码修改</string>
    <string name="confirm_password">确认密码</string>
    <string name="login_out">退出</string>
    <string name="white_list">白名单</string>
    <string name="login_success">登录成功</string>

</resources>
