<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/login"
        app:titleTextColor="#FFFFFF" />

    <ImageView
        android:id="@+id/iv_head"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:src="@mipmap/head_7" />

    <EditText
        android:id="@+id/et_account"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/white_edit_background"
        android:drawableLeft="@mipmap/account"
        android:drawablePadding="4dp"
        android:hint="@string/please_input_account"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:nextFocusForward="@+id/et_password"
        android:padding="6dp"
        android:singleLine="true"
        android:textColor="#ffffff"
        android:textColorHint="#FFFFFF"
        android:textCursorDrawable="@drawable/white_cursor" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/white_edit_background"
        android:drawableLeft="@mipmap/password"
        android:drawablePadding="4dp"
        android:hint="@string/please_input_pwd"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="6dp"
        android:singleLine="true"
        android:textColor="#ffffff"
        android:textColorHint="#FFFFFF"
        android:textCursorDrawable="@drawable/white_cursor" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="40dp"
        android:layout_marginTop="12dp"
        android:padding="4dp"
        android:text="@string/go_register"
        android:textColor="#FFFFFF"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_button"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</LinearLayout>
