<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/base_background"
        app:navigationIcon="@mipmap/back"
        app:title="@string/user_info"
        app:titleTextColor="#FFFFFF" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColorHint="#FFFFFF"
        android:theme="@style/TextInputLayout">

        <EditText
            android:id="@+id/et_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawableLeft="@mipmap/password2"
            android:drawablePadding="10dp"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textCursorDrawable="@drawable/white_cursor"
            android:textSize="22sp"
            android:theme="@style/WhiteBackgroundEditText" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColorHint="#FFFFFF"
        android:theme="@style/TextInputLayout">

        <EditText
            android:id="@+id/et_password3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawableLeft="@mipmap/password2"
            android:drawablePadding="10dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textCursorDrawable="@drawable/white_cursor"
            android:textSize="22sp"
            android:theme="@style/WhiteBackgroundEditText" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>
